# yalexide

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  fibonacci.yal
src/: GUI.h  Tokenize.h  YalexConsolePanel.h  YalexDefinition.h  YalexEditor.h  YalexInfoPanel.h  YalexStackPanel.h  YalexSystemPanel.h  main.cpp  yalex_globals.cpp  yalex_globals.h
